--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="../starter-code/css/main.css">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="main-container">
+    <div class="main-phones">
+      <img src="../starter-code/images/phones.png">
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="main-right">
+      <header class="main-right-header">
+        <img class="instagram-img" src="../starter-code/images/brand.png">
+        <a href="https://www.instagram.com/accounts/login/?source=auth_switcher"><button class="main-right-button"><img class="home-icon"
+              src="../starter-code/images/home.png">Log in</button></a>
+      </header>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <section id="frame">
+        <div class="main-right-frame">
+          <h1>Capture and Share<br> the World's Moments</h1>
+          <article class="capture-and-share">
+            <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life<br> with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look<br> and feel, then post to Instagram &mdash;
+              it's that easy. You can<br> even share to Facebook, Twitter, Tumblr and more. It's a<br> new way to see the
+              world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+          </article>
+          <a href="https://itunes.apple.com/app/instagram/id389801252?mt=8&vt=lo" target="_blank"><img src="../starter-code/images/badge-iphone.png"></a>
+          <a href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DsignupPage%26ig_
+          mid%3DW5d4LgAEAAHH29rICVtdGiN1Ld5g%26utm_content%3Dlo%26utm_medium%3Dbadge" target="_blank"><img src="images/badge-android.png"></a>
+        </div>
+      </section>
+    </div>
+  </div>
 
-  Oh yeah, did we mention it's free?
+  <nav id="footer-nav">
+    <div class="footer">
+      <ol class="ol-nav-bar">
+        <li class="nav-bar-li"><a href="https://www.instagram.com/about/us/" target="_blank" class="footer-link">About Us</a></li>
+        <li class="nav-bar-li"><a href="https://help.instagram.com/" target="_blank" class="footer-link">Support</a></li>
+        <li class="nav-bar-li"><a href="https://business.instagram.com/blog?" target="_blank" class="footer-link">Blog</a></li>
+        <li class="nav-bar-li"><a href="https://instagram-press.com/" target="_blank" class="footer-link">Press</a></li>
+        <li class="nav-bar-li"><a href="https://www.instagram.com/developer/" target="_blank" class="footer-link">API</a></li>
+        <li class="nav-bar-li"><a href="https://www.instagram.com/about/jobs/" target="_blank" class="footer-link">Jobs</a></li>
+        <li class="nav-bar-li"><a href="https://help.instagram.com/519522125107875" target="_blank" class="footer-link">Privacy</a></li>
+        <li class="nav-bar-li"><a href="https://help.instagram.com/581066165581870" target="_blank" class="footer-link">Terms</a></li>
+        <!--<li class="nav-bar-li"><b>&copy; 2014 INSTAGRAM</b></li>-->
+      </ol>
+      <aside>&copy; 2014 INSTAGRAM</aside>
+    </div>
+  </nav>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
