--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,47 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  
+<div class = "main">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <section>
+    <div class = "login-menu">
+      <img class="brand" src="images/brand.png">
+      <button>
+        <img class="home-icon" src="images/home.png">
+        <p class="home-button">Log in</p>
+      </button>
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div class = "card">
+    <h2>Capture and Share the World's Moments</h2>
+    <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+    <p>Oh yeah, did we mention it's free?</p>
+    <img class="app-links" src="images/badge-iphone.png">
+    <img class="app-links" src="images/badge-android.png">
+  </div>
 
-  Oh yeah, did we mention it's free?
+</section>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+<img class="phones" src="images/phones.png">
+</div>
+<footer>
+  <ul class = "footer-menu">
+    <li class="footer-menu-item">About Us</li>
+    <li class="footer-menu-item">Support</li>
+    <li class="footer-menu-item">Blog</li>
+    <li class="footer-menu-item">Press</li>
+    <li class="footer-menu-item">API</li>
+    <li class="footer-menu-item">Jobs</li>
+    <li class="footer-menu-item">Privacy</li>
+    <li class="footer-menu-item">Terms</li>
+  </ul>
+    <p class = "copyright">&copy; 2014 Instagram</p>
+  </footer> 
 </body>
 </html>
