--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,48 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link href="./css/main.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  Instagram
-a
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="sectionLeft">
+    <img src="./images/phones.png">
+  </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div class="sectionRight">
+    <img src="./images/brand.png" class="middleImg">
+    <button><img src="./images/home.png" class="middleImg"> Log in</button>
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
+    <div class="contenido">
+        <h1>Capture and Share<br> the World's Moments</h1>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+
+        <p>Oh yeah, did we mention it's free?</p>
+
+      <a href="#"><img src="./images/badge-iphone.png" alt="Download on the App Store" class="appleApp"></a>
+      <a href="#"><img src="./images/badge-android.png" alt="Get it on Google Play" class="AndroidApp"></a>
+    
+    </div>
+  </div>
+
+
+<section class="menuInf">
+  <a href="#">About Us</a>
+  <a href="#">Support</a>
+  <a href="#">Blog</a>
+  <a href="#">Press</a>
+  <a href="#">API</a>
+  <a href="#">Jobs</a>
+  <a href="#">Privacy</a>
+  <a href="#">Terms</a>
   &copy; 2014 Instagram
+</section>
+
+
+
 </body>
 </html>
