--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,21 +2,40 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="blue-color">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  
+  <img class = "phone" src = "./images/phones.png" alt="phone">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <button type = "button" class = "button">Log in</button>
+  
+  <h1 class = "logo"><img src = "./images/brand.png" alt="Instagram"></h1>
 
-  Oh yeah, did we mention it's free?
+  <div class = container>
 
-  Download on the App Store
-  Get it on Google Play
+    <div class = "paragraph">
+    <h2 class = "subtitle">Capture and Share the World's Moments</h2>
+  
+    <p>Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.</p>
 
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+
+    <p>Oh yeah, did we mention it's free?</p>
+
+    <img src = "./images/badge-iphone.png" alt = "Download on the App Store">
+    <img src = "./images/badge-android.png" alt = "Get it on Google Play">
+    </div>
+  </div>
+</div>
+
+<div class = "white-color">
+
+  <footer>
+  <nav>
   About Us
   Support
   Blog
@@ -25,7 +44,10 @@
   Jobs
   Privacy
   Terms
-
   &copy; 2014 Instagram
+</nav>
+</footer>
+</div>
+
 </body>
 </html>
