--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="back-body">
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <section>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class="telefonos">
+      <img src="images/phones.png" alt="phones" height="100%">
+    </div>
 
-  Oh yeah, did we mention it's free?
+    <div class="description">
 
-  Download on the App Store
-  Get it on Google Play
+      <img class="logo-instagram" src="images/brand.png" alt="Instagram" width="43%" height="13%">
+      <div class="caja-home">
+        <img class="home" src="images/home.png" alt="home" width="3%" height="3%">
+        <p class="texto-home"> Log in </p>
+      </div>
+      <div class="caja-texto">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+        <img class="frame" src="./images/frame.png">
+        <p class="texto">
 
-  &copy; 2014 Instagram
+          <strong> Capture and Share the World's Moments </strong><br /><br />
+
+          Instagram is a <b>fast</b> , <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
+
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that
+          easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+
+          Oh yeah, did we mention it's free?
+
+          <br /><br />
+          <img src="images/badge-android.png" alt="badge-android" height="28%" width="40%">
+          <img src="images/badge-iphone.png" alt="badge-iphone" height="30%" width="40%">
+
+        </p>
+
+      </div>
+    </div>
+
+
+  </section>
+  <div class="clear" />
+  <footer>
+    About Us
+
+    Support
+
+    Blog
+
+    Press
+
+    API
+
+    Jobs
+    Privacy
+    Terms
+    &copy; 2014 Instagram
+  </footer>
 </body>
+
 </html>
