--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,45 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
-  Instagram
+  <div class="container">
+    <div class="positionLeft">
+      <img src="./images/phones.png" alt="phones">
+    </div>
 
-  Capture and Share the World's Moments
+    <div class="positionRight">
+        <img src="./images/brand.png" alt="Instagram">
+        <div class="button-log">
+            <img src="./images/home.png">
+            <a href="#" class="button-log-text">Log in</a>
+        </div>
+        <img src="./images/frame.png" alt="frame" class="frame-size">
+        <div class="card">
+            <h2 class="title">Capture and Share <br>the World's Moments</h2>
+            <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p><br>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p><br>
+            <p>Oh yeah, did we mention it's free?</p>
+            <img src="./images/badge-iphone.png" alt="ios">
+            <img src="./images/badge-android.png" alt="android">
+        </div>
+    </div>
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <footer class="nav-footer">
+    <ul class="nav-footer-ul">
+      <li class="nav-footer-li"><a class="nav-footer-item" href="#">About Us</a></li>
+      <li class="nav-footer-li"><a class="nav-footer-item" href="#">Support</a></li>
+      <li class="nav-footer-li"><a class="nav-footer-item" href="#">Blog</a></li>
+      <li class="nav-footer-li"><a class="nav-footer-item" href="#">Press</a></li>
+      <li class="nav-footer-li"><a class="nav-footer-item" href="#">API</a></li>
+      <li class="nav-footer-li"><a class="nav-footer-item" href="#">Jobs</a></li>
+      <li class="nav-footer-li"><a class="nav-footer-item" href="#">Privacy</a></li>
+      <li class="nav-footer-li"><a class="nav-footer-item" href="#">Terms</a></li>
+      <span id="insta-grey">&copy; 2014 Instagram</span>
+    </ul>
+  </footer> 
 </body>
 </html>
