--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,42 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="container">
+    <section class="phone">
+      <img src="./images/phones.png" alt="smartphone">
+    </section>
+    <section class="text">
+      <div class="logo">
+        <img src="./images/brand.png" alt="logo insta">
+        <button><img src="./images/home.png" alt="button">Log in</button>
+      </div>
+      <div class="content">
+      <h1>Capture and Share <br> the World's Moments</h1>
+      <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>          
+      <p>Oh yeah, did we mention it's free?</p>
+      <div class="app">
+        <img src="./images/badge-iphone.png" alt="download ios">
+        <img src="./images/badge-android.png" alt="download android">
+      </div>
+      </div>
+    </section>
+  </div>
+  <footer>
+  <ul>
+    <li><a href="#">About Us</a></li>
+    <li><a href="#">Support</a></li>
+    <li><a href="#"> Blog</a></li>
+    <li><a href="#">Press</a></li>
+    <li><a href="#">API</a></li>
+    <li><a href="#">Jobs</a></li>
+    <li><a href="#">Privacy</a></li>
+    <li><a href="#">Terms</a></li>
+    <li>&copy; 2014 Instagram</li>
+  </ul>
+</footer>
 </body>
 </html>
