--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,48 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="container">
+    <section class="photo">
+    </section>
 
-  Capture and Share the World's Moments
+    <section class="text">
+      <div class="logo">
+        <!-- logo + buton -->
+      </div>
+      <div>
+        <h1>Capture and Share <br> the World's Moments</h1>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <p> Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun way</strong> to share your life with friends and family.<br> </p>
+        
+        <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br> </p>
+      
+        <p> Oh yeah, did we mention it's free? </p>
+      </div>
+      <div>
+        <!-- img App Store + Google Play -->
+      </div>
+    </section>
+  </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
+  <footer>
+    <ul>
+      <li><a href="#"> About Us </a></li>
+      <li><a href="#"> Support </a></li>
+      <li><a href="#"> Blog </a></li>
+      <li><a href="#"> Press </a></li>
+      <li><a href="#"> API </a></li>
+      <li><a href="#"> Jobs </a></li>
+      <li><a href="#"> Privacy </a></li>
+      <li><a href="#"> Terms </a></li>
+      <li>&copy; 2014 Instagram </li>
+    </ul>
+  </footer>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
 </body>
 </html>
