--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <link rel="stylesheet" type="text/css" href=".//css/main.css">
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+  <div id="blue-background"></div>
+  <div class="top">
+    <img id="insta-logo" src=".//images/brand.png" alt="Logo Instagram">
+    <div class="login">
+      <button>
+        <img id="home" src="./images/home.png" alt="">Log in
+      </button>
+    </div>
+  </div>
+  <div class="container">
+    <div>
+      <img src="./images/phones.png" id="phones" alt="phones">
+    </div>
+    <div>
+      <h1>Capture and Share <br>World's Moments</h1>
 
-  Capture and Share the World's Moments
+      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+        that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        Oh yeah, did we mention it's free?</p>
+    </div>
+  </div>
+  <div id="apps">
+    <img src="./images/badge-iphone.png" id="app-store" alt="app store">
+    <img src="./images/badge-android.png" id="android store" alt="android store">
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  </div>
+  <footer>
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#"></a>Support</li>
+      <li><a href="#"></a>Blog</li>
+      <li><a href="#"></a>Press</li>
+      <li><a href="#"></a>API</li>
+      <li><a href="#"></a>Jobs</li>
+      <li><a href="#"></a>Privacy</li>
+      <li><a href="#"></a>Terms</li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 </body>
+
 </html>
