worked in class Wed

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,49 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <img src="images/phones.png" alt="smartphone" class="smartphone">
+  <div class="container-logos-text">
+    <div class="logos-buttons"> 
+      <img src="images/brand.png" alt="instagram logo" class="instagram-logo">
+      <div class="log-in-button"> 
+        <img src="images/home.png" alt="home">
+        <p class="log-in-text">Log in</p>
+      </div>
+     
+    </div>
+    <div class="text-container">
+        <div class="main-text">
+            <h2>Capture and Share the World's Moments</h2>
+            <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+          </div>
+    </div>
+    
+    <div class="app-logos">
+      <img src="images/badge-iphone.png" alt="App Store">
+      <img src="images/badge-android.png" alt="Google Play Store">
+    </div>
+   
+    <img>
+  </div>
+  <nav class="nav-bar">
+    <h3>About Us</h3>
+    <h3>Support</h3>
+    <h3>Blog</h3>
+    <h3>Press</h3>
+    <h3>API</h3>
+    <h3>Jobs</h3>
+    <h3>Privacy</h3>
+    <h3>Terms</h3>
+    <h3>Terms</h3>
+    <h3 class="copyright">© 2014 Instagram</h3>
+  </nav>
+  
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
