--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,45 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="background">v</div>
+<div class="content-container">
+  <div class="insta-img">
+    <img src="images/phones.png">
+  </div>
+  <div class="content">
+      <div class="content-header">
+          <img src="images/brand.png">
+          <a href="#">Log in</a>
+      </div>
+      <div class="content-text">
+      <h2>Capture and Share the World's Moments</h2>
+      <p>  Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+      <p>  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>  Oh yeah, did we mention it's free?</p>
+      </div>
+      <div class="app-buttons">
+          <img href="#" src="images/badge-iphone.png"> 
+          <img href="#" src="images/badge-android.png">
+        </div>
+  </div>
 
-  Capture and Share the World's Moments
+</div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <ul class="footer">
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li><a href="#">&copy; 2014 Instagram</a></li>
+    </ul>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
