--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,22 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="blue-box">
 
-  Capture and Share the World's Moments
+    <div class="logo">
+      <img src="images/brand.png">
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="phone-picture">
+      <img src="images/phones.png">
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class="text-box">
+      <h2>Capture and Share <br>the World's Moments</h2>
 
-  Oh yeah, did we mention it's free?
+    Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Download on the App Store
-  Get it on Google Play
+    Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
+    Oh yeah, did we mention it's free?
+    
+    <div class="brands">
+      <img class="brand" src="images/badge-iphone.png">
+      <img class="brand" src="images/badge-android.png">
+    </div>
+
+    </div>
+  </div>
   About Us
   Support
   Blog
