--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,58 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="main-flex-container">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  
 
-  Oh yeah, did we mention it's free?
+  <img src="../starter-code//images/phones.png">
 
-  Download on the App Store
-  Get it on Google Play
+  <div class="main-container">
+    <div class="brand-container">
+      <img src="../starter-code//images/brand.png">
+      <div class="log-in">
+        <img src="../starter-code//images//home.png">
+        <button>Log In</button>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      </div>
+    </div>
 
-  &copy; 2014 Instagram
+    <div class="text-container">
+      <h1>Capture and Share <br> the World's Moments</h1>
+      <p>
+        Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family. <br><br>
+      
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <br> <br>
+        Oh yeah, did we mention it's free?</p>
+
+      <div class="main-btn-container">
+          <img src="../starter-code//images/badge-iphone.png">
+          <img src="../starter-code//images/badge-android.png">
+
+      </div>
+    </div>
+
+  </div>
+
+</div>
+
+  <ul class="footer">
+    <li>About Us</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+    <li class="copy-right">&copy; 2014 Instagram</li>
+  </ul>
+
+
 </body>
 </html>
