I didn't come far

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,53 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="bgrTile">
+      </div>
+ 
+      <div class="flexDiv">
+      <img src="images/phones.png" alt="the phones">
+      </div>
+      
+      <div class="flexDiv backgroundFrame">
+          <div class="flexDiv">
+              <img src="images/brand.png" alt="instagram logo and font">
+              
+            </div>
+            <div class="flexDiv">
+                <button class="login">        
+                  <img src="images/home.png" alt="Log in Button">
+                  Log in
+                </button>
+              </div>
+  <h1>Capture and Share the World's Moments</h1>
+  
+  Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
   Oh yeah, did we mention it's free?
+  <br>
+ <img src="images/badge-iphone.png" alt="download on itunes">
+ <img src="images/badge-android.png" alt="download on google play store">
+</div>
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+<div class="flexDiv">
+<ul class="footerList">
+  <li>About Us</li>
+  <li>Support</li>
+  <li>Blog</li>
+  <li>Press</li>
+  <li>API</li>
+  <li>Jobs</li>
+  <li>Privacy</li>
+  <li>Terms</li>
+  <li>&copy; 2014 Instagram</li>
+</ul>
+</div>
 
-  &copy; 2014 Instagram
-</body>
+ </body>
 </html>
