--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+  <div class="bkg-blue">
+    <div class="container">
+      <div class="iphone">
+        <img src="images/phones.png" alt="iphone image">
+      </div>
+      <div class="rt-column">
+        <div id="list-inline" class="lg-bt">
+          <div>
+            <img src="images/brand.png" alt="Instagram icon">
+          </div>
+          <div>
+            <button id="login-btm">
+              <img src="images/home.png" alt="white home">
+              <span>
+                <p style="color: white;">Log in</p>
+              </span>
+            </button>
 
-  Capture and Share the World's Moments
+          </div>
+        </div>
+        <div id="text">
+          <img src="images/frame.png" alt="white frame">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          <h2>Capture and Share the World's Moments</h2>
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
+            <br>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
+            it's
+            that
+            easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            <br>
+            Oh yeah, did we mention it's free?</p>
+          <div class="bt-link">
+            <img src="images/badge-android.png" alt="badge-android">
+            <img src="images/badge-iphone.png" alt="badge-iphone">
+          </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+        </div>
+      </div>
+    </div>
+  
+    <footer id="list-inline">
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
+  </div>
 </body>
+
 </html>
