--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head class="head">
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
+  
 </head>
-<body>
-  Instagram
+<body class="body">
+  <div class="container">
+    <img src="images/Phones.png" alt="Phones picture">
+    <div class="container-text">
+      <div class="title">
+        <img src="images/brand.png" alt="Instagram Logo">
+        <a href="#"><img src="images/home.png" alt="Instagram Logo">Log In</a>
+      </div>
+     <div class="box">
+     <h2 class="h2">Capture and Share the World's Moments</h2>
+      <article class="text">
+       <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Capture and Share the World's Moments
+       <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+        <p>Oh yeah, did we mention it's free?</p>
+      </article>
+      <div class="badges">
+        <a href="#"><img src="images/badge-iphone.png" alt="Download on the App Store"></a>
+        <a href="#"><img src="images/badge-android.png" alt="Get it on Google Playn"></a>
+      </div>
+    </div>
+    </div>
+  </div> 
 </body>
+<div class="container">
+<nav class="nav-bar">
+  <ul>
+    <li class="nav-bar-li"><a href="#aboutus" class="nav-bar-item">About Us</a></li>
+    <li class="nav-bar-li"><a href="#support" class="nav-bar-item"></a>Support</a></li>
+    <li class="nav-bar-li"><a href="#blog" class="nav-bar-item"></a>Blog</a></li>
+    <li class="nav-bar-li"><a href="#press" class="nav-bar-item"></a>Press</a></li>
+    <li class="nav-bar-li"><a href="#api" class="nav-bar-item"></a>API</a></li>
+    <li class="nav-bar-li"><a href="#jobs" class="nav-bar-item"></a>Jobs</a></li>
+    <li class="nav-bar-li"><a href="#privacy" class="nav-bar-item"></a>Privacy</a></li>
+    <li class="nav-bar-li"><a href="#team" class="nav-bar-item"></a>Terms</a></li>
+  </ul>
+</nav>
+<footer class="footer">&copy; 2014 Instagram</footer>
+</div>
 </html>
