--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Instagram</title>
+  <title>Instagram - clone</title>
+  <link rel="stylesheet" href="css\main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="back-image">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+<div class="general1">
 
-  Oh yeah, did we mention it's free?
+  <div class="iphone-img">
+    <img src="/starter-code/images/phones.png" alt="phones">
+  </div>
 
-  Download on the App Store
-  Get it on Google Play
+  <div class="brand">
+    <img src="/starter-code/images/brand.png" alt="">
+  </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <div class="home-login">
+    <a href="#">Login</a>
+  </div>
+
+  <div class="content">
+    <h2>
+      Capture and Share the World's Moments
+    </h2>
+
+    <p>
+      Instagram is a fast, beautiful and fun way to share your life with friends and family.
+
+      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+
+      Oh yeah, did we mention it's free?
+    </p>
+  </div>
+
+  <div class="bottom-buttons">
+    Download on the App Store
+    Get it on Google Play
+  </div>
+
+</div>
+
+<footer>
+  <ul>
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+  </ul>
+</footer>
 
   &copy; 2014 Instagram
+
 </body>
 </html>
