--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="css/main.css">
+
 <head>
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+  <div class="">
+    <div class="content">
+      <div class="box phoneimg">
+        <img src="images/phones.png">
+      </div>
 
-  Capture and Share the World's Moments
+      <div class="maintext">
+        <div class="brand">
+          <img src="images/brand.png" alt="Instagram">
+        </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <div class="text">
+          <h1>Capture and Share the World's Moments</h1>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Oh yeah, did we mention it's free?
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
+            it's
+            that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Download on the App Store
-  Get it on Google Play
+            Oh yeah, did we mention it's free?
+          </p>
+        </div>
+        <div class="badges">
+          <img src="images/badge-iphone.png" alt="Get it on Apple Store">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+          <img src="images/badge-android.png" alt="Get it on Google Play">
+        </div>
+      </div>
+    </div>
 
-  &copy; 2014 Instagram
+
+    <div class="footermenu">
+      About Us
+      Support
+      Blog
+      Press
+      API
+      Jobs
+      Privacy
+      Terms
+    </div>
+    <div>
+      &copy; 2014 Instagram
+
+    </div>
+  </div>
+
+
+
 </body>
+
 </html>
