--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <div class = "darkBlue">
 
-  Capture and Share the World's Moments
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class = "container">
+    <div>
+      <img src="images/phones.png" alt="Mobile phones picture">
+    </div>
+    <div class = "innerContainer">
+      <div class = "top-inner-container">
+        <img src="images/brand.png" alt="The Instagram Logo">
+        <span class = "icon-and-button">
+          <img src="images/home.png" class = "home-icon" alt="Home Icon">
+          <a href="/home" class = "button">Log in</a>
+        </span>
+      </div>  
+      <img src="images/frame.png" class = "frame" alt="shadowed frame for text">
+      <section class = "pitch-text">
+        <h2>Capture and Share<br> the World's Moments</h2>
+        <p class = "black">
+          Instagram is a <span class = "bold">fast, beautiful</span> and <span class = "bold">fun</span> way to share your life with friends and family. <br><br>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
+          Oh yeah, did we mention it's free?
+        </p>
+      </section>
+      <img src="images/badge-android.png" class = "download-buttons" alt="Get it on Google Play">
+      <img src="images/badge-iphone.png" class = "download-buttons" alt="Download on the App Store">
+    </div>
+  </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <img src="images/bgtile.png" alt="">
+  <div class = "footer-menu">
+    About Us
+    Support
+    Blog
+    Press
+    API
+    Jobs
+    Privacy
+    Terms
+    <span class = "copyright">&copy; 2014 Instagram</span>
+  </div>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
