--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+    <div class="header">
+        <div id="logo"><img src="./images/brand.png"/></div>
+  
+  <div> <img src="./images/phones.png" alt="phones"></div>
+  
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <h1>Capture and Share the World's Moments</h1> 
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Oh yeah, did we mention it's free?
+      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    
+      Oh yeah, did we mention it's free?</p> 
 
-  Download on the App Store
-  Get it on Google Play
+      Download on the App Store
+      Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <nav class="container">
+          <div>About us</div>
+          <div>Support</div>
+          <div>Blog</div>
+          <div>Press</div>
+          <div>API</div>
+          <div>Jobs</div>
+          <div>Privacy</div>
+          <div>Terms</div>
+          <div>&copy; 2014 Instagram</div>
+        </nav>
 
-  &copy; 2014 Instagram
+    
+
+ 
+
+  
 </body>
 </html>
