--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="container">
+    <img src= "images/phones.png" alt= "PhoneIcon">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class= "textcontainer">
+      <div class= "containerTop">
+        <img src= "images/brand.png" alt="Instagram" class="instaIcon">
+        <div class="iconButton">
+          <img src="images/home.png" alt="Home">
+          <span class= "logIn">Log in</span>
+        </div>
+      </div>
+      <div class="textbox">
+        <h2 class="title2">Capture and Share the World's Moments</h2>
+  
+        <p>Instagram is a <bold>fast, beautiful</bold> and <bold>fun</bold> way to share your life with friends and family.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Oh yeah, did we mention it's free?
+        <p>Oh yeah, did we mention it's free?</p>
+        
+        <div>
+          <img src= "images/badge-iphone.png" alt= "DownloadonAppStore">
+          <img src= "images/badge-android.png" alt="DownloadonGooglePlay">
+        </div>
 
-  Download on the App Store
-  Get it on Google Play
+      </div>
+    </div>
+  </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="bottomBar">
+    <p class="links">
+    <span class="bottomLinks">About Us</span>
+    <span class="bottomLinks">Support</span>
+    <span class="bottomLinks">Blog</span>
+    <span class="bottomLinks">Press</span>
+    <span class="bottomLinks"><API</span>
+    <span class="bottomLinks">Jobs</span>
+    <span class="bottomLinks">Privacy</span>
+    <span class="bottomLinks">Terms</span></p>
+    
+    <p class="logo">&copy; 2014 Instagram
+    </p>
+  </div>
+  
 </body>
+
 </html>
