--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
-<body>
-  Instagram
 
-  Capture and Share the World's Moments
+<body class="container">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <section class="main container">
 
-  Oh yeah, did we mention it's free?
+      <div>
+        <img src="images/phones.png" alt="">
+      </div>
 
-  Download on the App Store
-  Get it on Google Play
+      <div class="right-box">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+        <div class="container logo-login">
+          <div>
+            <img src="images/brand.png" alt="Instagram Logo">
+          </div>
+          <div>
+            <img src="images/home.png" alt="">
+            <span>Log in</span>
+          </div>
+        </div>
 
-  &copy; 2014 Instagram
+        <div class="container text-box">
+          <h1>
+            Capture and Share <br>the World's Moments
+          </h1>
+          <p class="main-text-p">
+            Instagram is a fast, beautiful and fun way to share your life with friends and family.<br>
+
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
+            it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
+
+            Oh yeah, did we mention it's free?
+          </p>
+
+          <div class="container">
+            <div>
+              <img src="images/badge-iphone.png" alt="">
+            </div>
+
+            <div>
+              <img src="images/badge-android.png" alt="">
+            </div>
+          </div>
+        </div>
+
+      </div>
+  </div>
+  </section>
+
+  <footer class="container footer">
+    <span>About Us</span>
+    <span>Support</span>
+    <span>Blog</span>
+    <span>Press</span>
+    <span>API</span>
+    <span>Jobs</span>
+    <span>Privacy</span>
+    <span>Terms</span>
+
+    <span class="copyright">&copy; 2014 Instagram</span>
+  </footer>
+
 </body>
+
 </html>
