--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,22 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Instagram</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="./css/main.css">
+  <title> Instagram </title>
 </head>
-<body>
-  Instagram
 
-  Capture and Share the World's Moments
+<body>
+  <div class="header">
+  <img>
+  <div id="logo">
+    <img src="./images/brand.png"/>
+    <img src="./images/home.png">
+  </div>
+  <div class:".container">
+
+ <h1>Capture and Share the World's Moments </h1>
 
   Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
   Oh yeah, did we mention it's free?
+  <img src="./images/badge-android.png">
+  <img src="./images/badge-iphone.png">
+  <img src="./images/phones.png">
+  </div>
 
-  Download on the App Store
-  Get it on Google Play
-
+  <footer>
+  <div class="box">
+  <ul>
   About Us
   Support
   Blog
@@ -27,5 +40,9 @@
   Terms
 
   &copy; 2014 Instagram
+  </ul>
+  </div>
+  </footer>
+
 </body>
 </html>
