--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -3,29 +3,59 @@
 <head>
   <title>Instagram</title>
 </head>
+<link rel="stylesheet" href="css/main.css">
 <body>
-  Instagram
+  <section>
+    <div class="head">
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    </div>
+    <div class="content">
+        <div class="left">
+            <div class="iphone">
+                <img src="images/phones.png" alt="iPhone Preview" id="iphone">
+            </div>
+        </div>
+        <div class="right">
+            <div class="instaLogo">
+                <img src="images/brand.png" alt="Instagram Logo" id="logo">
+                <button id="login"><img src="images/home.png" alt="Home Icon" id="home"> Log in</button>
+              </div>
+              <div class="text">
+                <h2>Capture and Share the World's Moments</h2>
+                <p>
+                  Instagram is a fast, beautiful and fun way to share 
+                  your life with friends and family.
+                </p>
+                <p>
+                  Take a picture or video, choose a filter to transform its look and feel,
+                   then post to Instagram &mdash; it's that easy. You can even share to Facebook,
+                    Twitter, Tumblr and more. It's a new way to see the world.
+                </p>
+                <p>
+                  Oh yeah, did we mention it's free?
+                </p>
+                <div id="download">
+                    <a href="#"><img src="images/badge-iphone.png" alt="Download on AppStore Button"></a> 
+                    <a href="#"><img src="images/badge-android.png" alt="Google Play Download Button"></a>
+                </div> 
+              </div>
+        </div>
+    </div>
+  </section>
+  <footer>
+      <div class="foot">
+        <ul> 
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+          <li><a href="#">&copy; 2014 Instagram</a></li>
+        </ul>
+      </div>
+    </footer>
 </body>
 </html>
