--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -4,6 +4,7 @@
   <title>Instagram</title>
 </head>
 <body>
+  <img src="images/phones.png">
   Instagram
 
   Capture and Share the World's Moments
