--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Instagram</title>
+  <title>Instagram Clone Page</title>
+  <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=helvetica:300,600" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=arial:300,600" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=sans-serif:300,600" rel="stylesheet">
 </head>
 <body>
-  <img src="images/phones.png">
-  Instagram
+<div class="bluebox">
+    <img class="brand-image" src="images/brand.png" alt="brand-image">
+    <p class= "login-button">Log In</p>
 
+
+  </div>
+ 
+  
+  
+  <p>Instagrammmmmm
   Capture and Share the World's Moments
-
   Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
   Oh yeah, did we mention it's free?
-
   Download on the App Store
   Get it on Google Play
 
@@ -25,7 +32,7 @@
   API
   Jobs
   Privacy
-  Terms
+  Terms</p>
 
   &copy; 2014 Instagram
 </body>
