--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,64 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Instagram - clone</title>
-  <link rel="stylesheet" href="css\main.css">
+  <title>Instagram</title>
+  <link rel="stylesheet" href="/starter-code/css/main.css">
 </head>
 <body>
 
-  <div class="back-image">
+  <div class="background">
+    <!-- <img src="/starter-code/images/bgtile.png" alt="background"> -->
+  </div>
+
+  <div id="main">
+    <div id="iphones">
+      <img src="/starter-code/images/phones.png" alt="iphones">
+    </div>
+    
+    <div id="content">
+      
+      <div id="title">
+        <div id="logo">
+          <img src="/starter-code/images/brand.png" alt="Instagram logo">
+        </div>
+
+        <div>
+          <button id="login-button">
+            <img src="/starter-code/images/home.png">
+            <a href="#">Log in</a>
+          </button>
+        </div>
+
+      </div>
+      <div id="description">
+        <h2>
+          Capture and Share<br>the World's Moments
+        </h2>
+        <p>
+          Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.
+        </p>
+        <p>
+          Take a picture or video, choose a filter to transform its look and feel,then post to Instagram &mdash; it's that easy. You can even share toFacebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
+        <p>
+          Oh yeah, did we mention it's free?
+        </p>
+
+  
+        <a href="#"><img src="/starter-code/images/badge-iphone.png" alt="App store"></a>
+        <a href="#"><img src="/starter-code/images/badge-android.png" alt="Android store"></a>
+      </div>
+
+    </div>
+    <br>
 
   </div>
 
-<div class="general1">
+  <footer>
+    <div id="footerish">
+        <a href="#">About Us</a>
+        <a href="#">Support</a>
+        <a href="#">Blog</a>
+        <a href="#">Press</a>
+        <a href="#">API</a>
+        <a href="#">Jobs</a>
+        <a href="#">Privacy</a>
+        <a href="#">Terms</a>
+        &copy; 2014 Instagram
+    </div>
 
-  <div class="iphone-img">
-    <img src="/starter-code/images/phones.png" alt="phones">
-  </div>
-
-  <div class="brand">
-    <img src="/starter-code/images/brand.png" alt="">
-  </div>
-
-  <div class="home-login">
-    <a href="#">Login</a>
-  </div>
-
-  <div class="content">
-    <h2>
-      Capture and Share the World's Moments
-    </h2>
-
-    <p>
-      Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-      Oh yeah, did we mention it's free?
-    </p>
-  </div>
-
-  <div class="bottom-buttons">
-    Download on the App Store
-    Get it on Google Play
-  </div>
-
-</div>
-
-<footer>
-  <ul>
-    <li>About Us</li>
-    <li>Support</li>
-    <li>Blog</li>
-    <li>Press</li>
-    <li>API</li>
-    <li>Jobs</li>
-    <li>Privacy</li>
-    <li>Terms</li>
-  </ul>
-</footer>
-
-  &copy; 2014 Instagram
+  </footer>
 
 </body>
 </html>
