done instagram clone

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -8,32 +8,50 @@
   <link href="https://fonts.googleapis.com/css?family=sans-serif:300,600" rel="stylesheet">
 </head>
 <body>
-<div class="bluebox">
-    <img class="brand-image" src="images/brand.png" alt="brand-image">
-    <p class= "login-button">Log In</p>
 
-
+  <div class="bluebox">
+      <div class="phone-img-box">
+          <img src="images/phones.png" alt="phones-image" alt="phones-imgage">
+       </div>
+    <img class="brand-image" src="images/brand.png" alt="brand-image" width=20%>
+    
+    <div class= "button-box">
+      <img class="button-icon" src="images/home.png" alt="home-image">
+      <p class="button-text"> <strong>Log in</strong></p>
+    </div>
   </div>
+
+  <div class= "content-box">
+      <img src="images/frame.png" alt="frame-image">
+      <div class="content-text">
+      <h1>Capture and Share the World's Moments</h1>
+    <p class="content-copy"> Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.<br><br>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
+          Oh yeah, did we mention it's free?</p></div>
+          <div class="appstore-button1">
+          <img src="images/badge-iphone.png" alt="app-store-image"></div>
+          <div class="appstore-button2">
+          <img src="images/badge-android.png" alt="g-play-image"></div>
+  </div>
+
+  <div class="footer">
+    <ul>
+      <li class = "footer-links">about us</li>
+      <li class = "footer-links">support</li>
+      <li class = "footer-links">blog</li>
+      <li class = "footer-links">press</li>
+      <li class = "footer-links">api</li>
+      <li class = "footer-links">jobs</li>
+      <li class = "footer-links">privacy</li>
+      <li class = "footer-links">terms</li>
+      <li class="footer-copyright">&copy; 2014 Instagram</li>
+    </ul>
+</div>
+
+
+  
+  
  
-  
-  
-  <p>Instagrammmmmm
-  Capture and Share the World's Moments
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-  Oh yeah, did we mention it's free?
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms</p>
-
-  &copy; 2014 Instagram
 </body>
 </html>
+
