--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,52 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div id="background">
+    <div class="content">
+      <div class="phones">
+        <img src="images/phones.png">
+        </div>
+      <div class="branding-right">
+        <img src="images/brand.png">
+        <button class="log-in"><img src="images/home.png"><p>Log in</p></button>
+      </div>
+      <div class="content-right">
+         <h1>Capture and Share the World's Moments</h1>
 
-  Capture and Share the World's Moments
+         <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+         <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; 
+          it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+          <p>Oh yeah, did we mention it's free?</p>
+          <div class="logo-apple">
+              <img src="images/badge-iphone.png">
+          </div>
+          <div class="logo-android">
+              <img src="images/badge-android.png">
+          </div>
+      </div>
+  <div class="footer">
+  <footer>
+    <nav class="footer-nav">
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Job</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+    </ul>
+    </nav>
+    <p>&copy; 2014 Instagram</p>
+  </footer>
+  </div>
+</div>
+</div>
 </body>
 </html>
