--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -12,7 +12,7 @@
         </div>
       <div class="branding-right">
         <img src="images/brand.png">
-        <button class="log-in"><img src="images/home.png"><p>Log in</p></button>
+        <button class="button-log-in"><img src="images/home.png"><p>Log in</p></button>
       </div>
       <div class="content-right">
          <h1>Capture and Share the World's Moments</h1>
