--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,54 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<div class="blue-background">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <img src="images/phones.png" id="phones">
+ 
+  <img src="images/brand.png" id="brand">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+<button type="button" value="log-in" id="log-in"><img src="images/home.png"><b>Log in</b></button>
 
-  Oh yeah, did we mention it's free?
+</div>
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+
+<div class="white-background">
+
+  <h1>Capture and Share <br> the World's Moments</h1>
+
+  <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+  <p>Take a picture or video, choose a filter to transform its look 
+  and feel, then post to Instagram &mdash; it's that easy. You can
+  even share to Facebook, Twitter, Tumblr and more. It's a 
+  new way to see the world.</p>
+  <p>Oh yeah, did we mention it's free?</p>
+
+  <img src="images/badge-iphone.png" id="iphone">
+  <img src="images/badge-android.png">
+
+</div>
+
+<div class="footer">
+<ul>
+<li><b>About Us</b></li>
+<li><b>Support</b></li>
+<li><b>Blog</b></li>
+<li><b>Press</b></li>
+<li><b>API</b></li>
+<li><b>Jobs</b></li>
+<li><b>Privacy</b></li>
+<li><b>Terms</b></li>
+<li id="insta"><b>&copy; 2014 Instagram</b></li>
+</ul>
+  
+
+</div> 
 </body>
 </html>
