--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
+
 <body>
-  Instagram
+  <div class="background"></div>
 
-  Capture and Share the World's Moments
+  <img src="images/phones.png" class="cover-img">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="content">
+    <header>
+      <img src="images/brand.png">
+      <button><img src="images/home.png">
+        <a href="#">Log in</a></button>
+    </header>
+    <article class="text">
+      <h1 class="blue">Capture and Share the World's Moments</h1>
+      <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your
+        life with friends and family.<br><br>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+        that
+        easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>Oh
+        yeah,
+        did we mention it's free?</p>
+      <br>
+      <img src="images/badge-iphone.png">
+      <img src="images/badge-android.png">
+    </article>
+  </div>
+  <div class="clearfix"></div>
 
-  Oh yeah, did we mention it's free?
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  </footer>
 </body>
+
 </html>
