--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -29,8 +29,8 @@
 
         <p>Oh yeah, did we mention it's free?</p>
 
-        <button>Download on the App Store</button>
-        <button>Get it on Google Play</button>
+        <img src="./images/badge-iphone.png" alt="iphone">
+        <img src="./images/badge-android.png" alt="android">
       </div>
     </div>
   </section>
