--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,38 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  Instagram
+    <div class="header">
+        <img src="images/brand.png"><img src="images/home.png">
+      </div>
+      <div class="mobilephone">
+          <img src="images/phones.png">
+      </div>
+      <div class="text">
 
-  Capture and Share the World's Moments
+  <h2> Capture and Share the World's Moments </h2>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
   Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+  <br><br>
+  <img src="images/badge-iphone.png">  <img src="images/badge-android.png">
+  </div>
+  <div id="container">
+    <nav id="topnav"> 
+      <a href="about.html">ABOUT US</a> 
+      <a href="menu.html">SUPPORT</a>
+      <a href="menu.html">BLOG</a> 
+      <a href="contact.html">PRESS</a>
+      <a href="menu.html">API</a>
+      <a href="menu.html">JOBS</a>
+      <a href="menu.html">PRIVACY</a>
+      <a href="menu.html">TERMS</a> ©2014 INSTAGRAM
+    </nav>
+  </div>
+  </body>
 </html>
