Day2 Instagram Done

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="main.css">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <header>Dark blue bar</header>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <section>
+    <div class="move-up">
+    <div class="col-a">
+      <img src="images/phones.png" alt="Instagram logo" />
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class="col-b">
+    <div class="logo-icon">
+      <img class="icon" src="images/brand.png" alt="Instagram logo" />
+      <button type="submit"><img src="images/home.png" alt="Log-in"/>   Log in   </button>
+    </div>
 
-  Oh yeah, did we mention it's free?
+    <img id="img-frame" src="images/frame.png"/>
+    <div class="text">
+      <h5>Capture and Share the World's Moments</h5>
+      <p>
+        Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your
+        life with friends and family.
 
-  Download on the App Store
-  Get it on Google Play
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+        that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+        Oh yeah, did we mention it's free?
+      </p>
+      <div class="badges">
+        <img src="images/badge-iphone.png" alt="App-Store-icon" />
+        <img class="badge-google" src="images/badge-android.png" alt="Google-Play-icon" />
+      </div>
+    </div>
+  </div>
+  </div>
+  </section>
 
-  &copy; 2014 Instagram
+  <div class="clearfix"></div>
+
+  <footer class="container">
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Terms</a></li>
+      <li class="copy">&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
+
 </body>
+
 </html>
