--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,21 +2,37 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
+<header> 
+    <div class="phones-dimensions clearfix">
+      <img src="images/phones.png" alt="phones">
+    </div>
+</header>  
+    <div class="right-position">
+      <div class="pics-position">
+        <img class="header-img-instagram" src="images/brand.png" alt="Instagram"> 
+        <img class="header-img-home" src="images/home.png" alt="home">
+      </div>
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="frame-content">
+    <h1>Capture and Share the World's Moments</h1>
+    <span>Instagram is a fast, beautiful and fun way to share your life with friends and family.</span>
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+    <p>Oh yeah, did we mention it's free?</p>
+    </s>
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div>
+      <img src="images/badge-iphone.png" alt="Download on the App Store">
+      <img src="images/badge-android.png" alt="Get it on Google Play">  
+    </div>
+  </div>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
+<footer>
   About Us
   Support
   Blog
@@ -25,7 +41,8 @@
   Jobs
   Privacy
   Terms
-
   &copy; 2014 Instagram
+</footer>
+
 </body>
 </html>
